<resources>
    <string name="app_name">KeeMobile</string>

    <string name="default_file_name">MyVault.bdbx</string>

    <string name="landing_body_text">This application supports KeePass files up to version 3.x. You may also import raw
        XML or CSV files.
    </string>
    <string name="landing_title">Welcome</string>
    <string name="button_unlock">Unlock</string>
    <string name="button_clear_all">Clear All</string>
    <string name="button_undo">Undo</string>
    <string name="text_hint_password">Password</string>
    <string name="text_hint_search">Search</string>

    <string name="landing_popup_clear_all_info">All data related to recent files is cleared</string>

    <string name="dialogs_open_with">Open with</string>

    <string name="explore_search_no_results">No results</string>
    <string name="explore_menu_show_list">Show as list</string>
    <string name="explore_menu_show_folders">Show as folders</string>
    <string name="explore_all_files_closed">All files closed</string>

    <string name="drawer_file_list_header">Vaults</string>
    <string name="drawer_app_header">Application</string>
    <string name="drawer_app_settings">Settings</string>
    <string name="drawer_app_about">About</string>
    <string name="drawer_file_list_open">Open vault</string>
    <string name="drawer_content_description_close">Close vault %s</string>

    <array name="details_tabs">
        <item>General</item>
        <item>Files</item>
        <item>History</item>
    </array>

    <string name="details_title">Title</string>
    <string name="details_username">Username</string>
    <string name="details_password">Password</string>
    <string name="details_website">Website</string>
    <string name="details_notes">Notes</string>
    <string name="details_expires">Expires</string>
    <string name="details_date_created">Created</string>
    <string name="details_date_updated">Updated</string>
    <string name="details_date_historic_title">Changes</string>
    <string name="details_tags">Tags</string>
    <string name="details_otp">One Time Password</string>
    <string name="details_copy_notice">%s copied to the clipboard</string>
    <string name="details_downloads_size">%,.2f KB</string>
    <string name="details_downloads_empty">No files attached</string>

</resources>
